--- a/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject.vcxproj
@@ -139,6 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Character.cpp" />
+    <ClCompile Include="src\characterClasses\abilities\Ability.cpp" />
     <ClCompile Include="src\ClassStatistics.cpp" />
     <ClCompile Include="src\characterClasses\Archer.cpp" />
     <ClCompile Include="src\characterClasses\Assassin.cpp" />
@@ -175,7 +176,7 @@
     <ClInclude Include="src\characterClasses\CharacterClass.h" />
     <ClInclude Include="include\jsoncpp\json\json-forwards.h" />
     <ClInclude Include="include\jsoncpp\json\json.h" />
-    <ClInclude Include="src\characterClasses\abilities\Abilities.h" />
+    <ClInclude Include="src\characterClasses\abilities\Ability.h" />
     <ClInclude Include="src\logging\Log.h" />
     <ClInclude Include="src\characterClasses\Swordsman.h" />
     <ClInclude Include="src\characterClasses\Warrior.h" />
