--- a/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="src\Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\BalancingDefinitions.h" />
     <ClInclude Include="src\Battle.h" />
     <ClInclude Include="src\Character.h" />
     <ClInclude Include="src\ClassStatistics.h" />
